update logic for User; repositories; providers; api; service; providers